<resources>
    <string name="app_name" translatable="false">TUNISAIR</string>
    <string name="title_activity_account" translatable="false">AccountActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_mouvement" translatable="false">MouvementActivity</string>
    <string name="title_activity_profil" translatable="false">ProfilActivity</string>
    <string name="title_activity_billet" translatable="false">BilletActivity</string>
    <string name="title_activity_miles" translatable="false">MilesActivity</string>
    <string name="title_activity_reclamation" translatable="false">ReclamationActivity</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="champ_obligatoir">Champ Obligatoire</string>
    <string name="longure_mot_de_passe">Votre mot de passe doit contenir 6 caractères au minimum</string>
    <string name="mail_invalide">Adresse mail invalide</string>
    <string name="mot_de_passe_identique">Votre mot de passe n\'est pas identique</string>
    <string name="verifier_tout_les_champs">Veuillez vérifier tous les champs</string>
    <string name="logure_numero_vole">Votre numero de vol doit contenir 4 chiffres</string>
    <string name="logure_numero_bielts">Votre numéro de billet doit contenir 10 chiffres</string>
    <string name="autre_programme">Autre programme ?</string>
    <string name="familiale">Familiale</string>
    <string name="individuelle">Individuelle</string>
    <string name="fran_ais">Français</string>
    <string name="english">English</string>
    <string name="arabic">عربى</string>
    <string name="chek_internet">Vous n\'êtes pas connecté à Internet</string>
    <string name="lieu_d_achat_de_vos_billets">Lieu d\'achat de vos billets</string>
    <string name="langue_de_communication">Langue de communication</string>
    <string name="type_adh_sion">Type adhésion</string>
    <string name="agence_habituelle">Agence habituelle</string>
    <string name="point_de_vente">Point de vente</string>
    <string name="site_vendeur">Site vendeur</string>
    <string name="pr_f_rence_de_si_ge">Préférence de siège</string>
    <string name="c_t_hublot">Côté hublot</string>
    <string name="c_t_couloir">Côté couloir</string>
    <string name="indiff_rent">Indifférent</string>
    <string name="classe_habituelle_de_voyage">Classe habituelle de voyage</string>
    <string name="affaire">Affaires</string>
    <string name="economique">Economique</string>
    <string name="mode_de_paiement">Mode de paiement</string>
    <string name="carte_de_cr_dit">Carte de crédit</string>
    <string name="cashe">Cashe</string>
    <string name="ch_que">Chèque</string>
    <string name="vos_habitude_de_voyage">Vos habitude de voyage</string>
    <string name="seul">Seul</string>
    <string name="accompagn_des_nombres_de_votre_famille">Accompagné des nombres de votre famille</string>
    <string name="avez_vous_besoin_d_une_assistance">Avez-vous besoin d\'une assistance?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="j_accepte_les_conditions_g_n_rales_du_programme">J’accepte les Conditions Générales du Programme</string>
    <string name="j_accepte_de_recevoir_les_nouveaut_s_fidelys_par_e_mail">J’accepte de recevoir les nouveautés Fidelys par e-mail</string>
    <string name="terminer">terminer</string>
    <string name="suivant">Suivant</string>
    <string name="tous_les_champs_doivent_tre_renseign_s">* Tous les champs doivent être renseignés</string>
    <string name="adresse_domicile">Adresse Domicile *</string>
    <string name="accepter_les_conditions">Veuillez accepter les Conditions Générales du Programme</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="vers">Vers</string>
    <string name="de">De</string>
    <string name="logure_reference">Votre numero de référence doit contenir 6 caractères</string>
    <string name="longure_ticket">Votre numero de ticket doit contenir 10 caractères</string>
    <string name="chek_reclamation">Votre Reclamation a été envoyé avec succès</string>
    <string name="title_activity_consultation">Mes réclamations</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="logure_entet_bielts_">Votre code billet doit contenir 3 chiffres</string>
    <string name="about">À propos de Fidelys</string>
    <string name="mvm">Mouvements</string>
    <string name="prof">Profil</string>
    <string name="achtB">Achat de Billets</string>
    <string name="achtM">Achat de Miles</string>
    <string name="rec">Envoyer Réclamation</string>
    <string name="deco">Déconnexion</string>
    <string name="user_name">Nom d\'utilisateur</string>
    <string name="psw">Mot de passe</string>
    <string name="login">Se Connecter</string>
    <string name="inscri">S\'inscrire</string>
    <string name="loc">Location</string>
    <string name="nom">Nom *</string>
    <string name="prenom">Prénom *</string>
    <string name="date_naissance">Date naissance *</string>
    <string name="adresse_mail">Adresse Email *</string>
    <string name="mot_de_pass">Mot de passe *</string>
    <string name="conf">Confirmation *</string>
    <string name="num_pasport">Numéro passeport(+100 Miles)</string>
    <string name="ville">Ville *</string>
    <string name="code_postale">Code Postale *</string>
    <string name="m">M</string>
    <string name="mme">Mme</string>
    <string name="mlle">Mlle</string>
    <string name="natio">Nationalité</string>
    <string name="pays">Pays</string>
    <string name="tel_dom">Tél Domicile *</string>
    <string name="tel_prof">Tél Professionnel</string>
    <string name="tel_mob">Tél Mobile(+100 Miles)</string>
    <string name="tel_fax">Tél Fax</string>
    <string name="société">Société</string>
    <string name="fonction">Fonction</string>
    <string name="num_vol">N° Vol</string>
    <string name="date">Date</string>
    <string name="num_billet">Num billet</string>
    <string name="num_1" translatable="false">199</string>
    <string name="num_2" translatable="false">1234567890</string>
    <string name="agence">Agence</string>
    <string name="voyage">Voyage à fournir plus tard</string>
    <string name="suit">Suivant</string>
    <string name="text">Voyage effectué durant les 4 semaines précédant votre adhésion</string>
    <string name="votre_id">Votre identifiant </string>
    <string name="solde">Prime</string>
    <string name="miles_qualifiants">Qualifiants</string>
    <string name="gender">Sexe</string>
    <string name="mobile">Mobile</string>
    <string name="mail">Email</string>
    <string name="modifier_Profil">Modifier Profil</string>
    <string name="modifier_Adhésion">Modifier Adhésion</string>
    <string name="nb_milles">Nombre des Miles</string>
    <string name="type_milles">Type des Miles</string>
    <string name="type1" translatable="false">( 1Miles =0,05TND )</string>
    <string name="type2" translatable="false">( 1Miles =0,1TND )</string>
    <string name="qualifiant" translatable="false">Qualifiant</string>
    <string name="prime" translatable="false">Prime</string>
    <string name="devise">Séléctionnez la devise</string>
    <string name="euro" translatable="false">Euro</string>
    <string name="dollar" translatable="false">Dollar</string>
    <string name="dinar" translatable="false">Dinar</string>
    <string name="prix">Prix total =</string>
    <string name="taux">Taux de change</string>
    <string name="taux1" translatable="false">1 EUR =3.00 TND </string>
    <string name="taux2" translatable="false">1 USD =2.60 TND  </string>
    <string name="acheter">Confirmer</string>
    <string name="type_rec">Type de Réclamation</string>
    <string name="date_vol">Date du Vol</string>
    <string name="ref_billet">Réf Billet</string>
    <string name="num_ticket">"N° ticket "</string>
    <string name="desc">Description</string>
    <string name="valider">Envoyer</string>
    <string name="name">Nom</string>
    <string name="pren">Prénom</string>
    <string name="naissance">Date de naissance</string>
    <string name="title_activity_reponse" translatable="false">ReponseActivity</string>
    <string name="mail_existe_db">Votre email est déja utilisé</string>
    <string name="accepte_condistion">Vueillez accepter les conditions</string>
    <string name="type_v">Type de voyage</string>
    <string name="simple">Aller simple</string>
    <string name="retour">Aller retour</string>
    <string name="dep">Départ</string>
    <string name="ret">Retour</string>
    <string name="passagers">Passagers</string>
    <string name="adultes">Adultes</string>
    <string name="jeunes">Jeunes</string>
    <string name="enfants">Enfants</string>
    <string name="b_b_s">Bébés</string>
    <string name="classe">Classe</string>
    <string name="simulation">Simulation</string>
    <string name="condition_d_achat_du_billets_prime">Condition d\'achat du Billets Prime</string>
    <string name="r_ponse">Réponse</string>
    <string name="date_r_ponse">Date Réponse</string>
    <string name="description">Description</string>
    <string name="type_r_clamation">Type Réclamation</string>
    <string name="date_envoi">Date Envoi</string>
    <string name="no_rec">Aucune Réclamation</string>
    <string name="en_cours">En cours</string>
    <string name="nb_place">Le nombre des places doit être entre 1 et 6 personnes</string>
    <string name="pt_dep">Veuillez choisir votre point de départ</string>
    <string name="pt_arr">Veuillez choisir votre point d\'arrivée</string>
    <string name="vol_inexis">Ce vols n\'existe pas !</string>
    <string name="pl_ins">Places insuffisant!</string>
    <string name="date_dep">Veuillez choisir une autre date de départ</string>
    <string name="date_arr">Veuillez choisir une autre date d\'arrivée</string>
    <string name="departs">De</string>
    <string name="arrives">Vers</string>
    <string name="detaile_sur_le_vol">Détails de paiement</string>
    <string name="total_1place">Total (1Place)</string>
    <string name="retoure_le">"Retour "</string>
    <string name="departs_le">Départ</string>
    <string name="prixe">Prix</string>
    <string name="modifier">Modifier</string>
    <string name="nb_places">Nb.Places</string>
    <string name="total_tnd">Total (TND)</string>
    <string name="paypal">PayPal</string>
    <string name="title_activity_liste_vol" translatable="false">listeVolActivity</string>
</resources>
