<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profil"
            android:title="@string/prof" />
        <item
            android:id="@+id/nav_billet"
            android:title="@string/achtB" />
        <item
            android:id="@+id/nav_miles"
            android:title="@string/achtM" />
        <item
            android:id="@+id/nav_mouv"
            android:title="@string/mvm" />
        <item
            android:id="@+id/nav_rec"
            android:title="@string/rec" />
        <item
            android:id="@+id/nav_cons"
            android:title="@string/title_activity_consultation" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_location"
                android:title="@string/loc" />
            <item
                android:id="@+id/nav_deconnexion"
                android:title="@string/deco" />
        </menu>
    </item>

</menu>
